# hw-packed-vector

./: .gitignore  README.md  circle.yml  hw-packed-vector.cabal  package.yaml  project.sh  stack.yaml
app/App/Commands/: CreateIndex.hs  Types.hs
bench/: Main.hs
src/HaskellWorks/Data/: PackedVector.hs
src/HaskellWorks/Data/PackedVector/: IO.hs  Internal.hs  PackedVector64.hs
test/HaskellWorks/: Gen.hs
test/HaskellWorks/Data/PackedVector/: InternalSpec.hs  PackedVector64Spec.hs
