cabal-version:      2.2

name:               hw-packed-vector
version:            0.0.0.1
synopsis:           Packed Vector
description:        Packed Vector. Please see README.md
category:           Data, Vector
stability:          Experimental
homepage:           http://github.com/haskell-works/hw-packed-vector#readme
bug-reports:        https://github.com/haskell-works/hw-packed-vector/issues
author:             John Ky
maintainer:         newhoggy@gmail.com
copyright:          2016-2019 John Ky
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-packed-vector

common base                 { build-depends: base                 >= 4          && < 5      }

common QuickCheck           { build-depends: QuickCheck                                     }
common bytestring           { build-depends: bytestring                                     }
common hedgehog             { build-depends: hedgehog                                       }
common hspec                { build-depends: hspec                                          }
common hw-bits              { build-depends: hw-bits              >= 0.4.0.0                }
common hw-hedgehog          { build-depends: hw-hedgehog                                    }
common hw-hspec-hedgehog    { build-depends: hw-hspec-hedgehog                              }
common hw-int               { build-depends: hw-int               >= 0.0.0.1                }
common hw-prim              { build-depends: hw-prim              >= 0.4.0.0                }
common hw-string-parse      { build-depends: hw-string-parse      >= 0.0.0.1                }
common safe                 { build-depends: safe                                           }
common vector               { build-depends: vector                                         }

common config
  default-language: Haskell2010

library
  import:   base, config
          , bytestring
          , hw-bits
          , hw-int
          , hw-prim
          , hw-string-parse
          , safe
          , vector
  exposed-modules:
    HaskellWorks.Data.PackedVector
    HaskellWorks.Data.PackedVector.Internal
    HaskellWorks.Data.PackedVector.PackedVector64
  other-modules:    Paths_hw_packed_vector
  autogen-modules:  Paths_hw_packed_vector
  hs-source-dirs:   src
  ghc-options:      -Wall -O2 -msse4.2

test-suite hw-packed-vector-test
  import:   base, config
          , QuickCheck
          , bytestring
          , hedgehog
          , hspec
          , hw-bits
          , hw-hedgehog
          , hw-hspec-hedgehog
          , hw-prim
          , vector
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:
      HaskellWorks.Data.PackedVector.InternalSpec
      HaskellWorks.Data.PackedVector.PackedVector64Spec
      HaskellWorks.Gen
      Paths_hw_packed_vector
  hs-source-dirs:   test
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:    hw-packed-vector
